--- a/app/tpls/home/main/demand2/useCaseScenario.html
+++ b/app/tpls/home/main/demand2/useCaseScenario.html
@@ -24,13 +24,13 @@
             <div class="projectBodyContent" style="top: 0;left: 0;">
                 <div class="useCaseList" ng-style="useCaseListStyle">
                     <div class="useCaseListfunction">
-                        <span class="floatleft selectNum">已选中2项：</span>                                                                   
-                        <span class="chatIconButton floatleft" ng-click="open('createFuncPoints','lg')">
-		                    <i class="iconfont icon-add"></i>新增场景
-		                </span>
+                        <span class="floatleft selectNum">已选中2项：</span>     
 		                 <span class="chatIconButton">
-		                    <i class="iconfont icon-delete_fill"></i>删除
-		                </span>  
+		                    <i class="iconfont icon-empty_fill"></i>删除
+		                </span> 
+                        <div class="floatright btn_add" style="margin-top: 10px" ng-click="open('createFuncPoints','lg')">
+                            <span class="cicleicon"><i class="iconfont icon-add"></i></span> 新增场景
+                        </div> 
                         <div class="clear"></div>
                     </div>
                     <div class="userCaseListTable">
