--- a/app/tpls/home/main/usecase/projectUsecaseManage.html
+++ b/app/tpls/home/main/usecase/projectUsecaseManage.html
@@ -21,30 +21,32 @@
 	<div class="projectBodyTitle">
 		用例管理
 	</div>
-	<div class="projectBodyContent" style="top: 56px;" ng-controller="usecaseCtrl">
-		<div class="useCaseListfunction">
-			<span class="floatleft selectNum">已选中2项：</span>
-			<span class="chatIconButton">
-                <i class="iconfont icon-empty_fill"></i>删除
-            </span>
-			<div class="floatright searchBox" style="margin-top: 7px;">
-				<input type="text" name="" class="inputSearch" placeholder="输入关键词按回车搜索">
-				<i class="iconfont icon-search"></i>
-			</div>
-			<div class="clear"></div>
-		</div>
+	<div class="projectBodyContent" style="top: 56px;" ng-controller="usecaseCtrl">		
 		<div class="usecaseListPanel floatleft" style="width: 60%;border-right: 5px solid #e4e6f1" ng-style="useCaseListStyle">
+			<div class="useCaseListfunction">
+				<span class="floatleft selectNum">已选中2项：</span>
+				<span class="chatIconButton">
+	                <i class="iconfont icon-empty_fill"></i>删除
+	            </span>
+				<div class="floatright searchBox" style="margin-top: 7px;">
+					<input type="text" name="" class="inputSearch" placeholder="输入关键词按回车搜索">
+					<i class="iconfont icon-search"></i>
+				</div>
+				<div class="clear"></div>
+			</div>
 			<div class="userCaseListTable">
 				<div style="" ui-grid="gridOptionsUsecase" ui-grid-autoResize ui-grid-selection ui-grid-pagination ui-grid-resize-columns ui-grid-edit class="gridTableBox margint-20"></div>
 			</div>
-
 		</div>
 		<div class="usecaseListPanel floatright" style="width: 40%;" ng-style="useCaseListStyle">
+			<div class="useCaseListfunction">
+				<span style="display: inline-block;overflow: hidden;text-overflow: ellipsis;white-space: nowrap;width: 100%">用例名称： 用例名称 用例名称 用例名称 用例名称 用例名称 用例名称 用例名称 用例名称 用例名称 用例名称 用例名称 用例名称</span>
+				<div class="clear"></div>
+			</div>
 			<div class="userCaseListTable">
-				<div style="width: 100%;font-size: 14px;color: #313131;margin-bottom: 10px;">
-					<p>用例名称： 用例名称 用例名称 用例名称 用例名称
-					</p>
-					<p>关联需求：需求 >
+				<div class="caseData">
+					<h5>关联需求</h5>
+					<p style="font-size: 14px;color: #313131;margin-bottom: 15px;">关联需求：需求>
 						<a sref="">需求1.1</a> >
 						<a sref="">场景1</a>
 					</p>
@@ -53,8 +55,8 @@
 					<h5>用例数据</h5>
 					<table class="table-fullborder table-fullborder2">
 						<tr>
-							<th>组件名称</th>
-							<th>参数</th>
+							<th style="text-align: center;">组件名称</th>
+							<th style="text-align: center;">参数</th>
 							<th>值</th>
 						</tr>
 						<tr>
