--- a/app/tpls/modal/createTask.html
+++ b/app/tpls/modal/createTask.html
@@ -10,6 +10,12 @@
         <li>
             <h1>任务名称：</h1>
             <input type="text" class="inputText">
+            <!--<div class="clearfix">-->
+            <p style="color:red;float:left;font-size:12px;line-height:35px;width:100%;padding-left:115px">
+					<i class="iconfont icon-cuowutishi" style="font-size:12px;"></i> 错
+			</p>
+            <!--</div>-->
+            
         </li>       
         <div class="clear"></div>                    
         <li>
