--- a/app/tpls/modal/newDemand2.html
+++ b/app/tpls/modal/newDemand2.html
@@ -87,11 +87,15 @@
 			<li>
 				<h1>需求名称：</h1>
 				<input type="text" name="" id="" value="" class="inputText" required="required" />
+				<p style="color:red;float:left;font-size:12px;line-height:35px;width:100%;padding-left:115px">
+					<i class="iconfont icon-cuowutishi" style="font-size:12px;"></i> 错需求信息 
+需求名称：需求的名称需求的名称需求的名称需求的
+				</p>
 			</li>
 			<div class="clear"></div>
 			<li>
 				<h1>需求编号：</h1>
-				<input type="text" name="" id="" value="" class="inputText" />
+				<input type="text" name="" id="" value="" class="inputText" />				
 			</li>
 			<div class="clear"></div>
 			<li class="floatleft">
