--- a/app/index.html
+++ b/app/index.html
@@ -1,22 +1,25 @@
 ﻿<!DOCTYPE html>
-<head>
-    <title>TestCenter</title>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="css/bootstrap-datetimepicker.min.css"/>
-    <link rel="stylesheet" type="text/css" href="css/angular-ui-tree.min.css">
-    <link rel="stylesheet" type="text/css" href="css/ui-grid.min.css">
-    <!-- 重置大小 -->
-    <link rel="stylesheet" type="text/css" href="css/angular-resizable.css">
-    <link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_371097_2wuot8s1z6pnl8fr.css">
-    <!-- 富文本编辑器 -->
-    <link rel="stylesheet" type="text/css" href="lib/umeditor/themes/default/css/umeditor.css">
-    <link href="css/reset.css" rel="stylesheet">
-    <link href="css/common.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="css/index.css">
-	<link rel="stylesheet" type="text/css" href="css/modal.css">
-</head>
-<body>
-    <div ui-view></div>
-    <script type="text/javascript" src="js/require.js" data-main="js/main"></script>
-</body>
+<html>
+	<head>
+		<title>TestCenter</title>
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+		<link rel="stylesheet" type="text/css" href="css/bootstrap-datetimepicker.min.css" />
+		<link rel="stylesheet" type="text/css" href="css/angular-ui-tree.min.css">
+		<link rel="stylesheet" type="text/css" href="css/ui-grid.min.css">
+		<!-- 重置大小 -->
+		<link rel="stylesheet" type="text/css" href="css/angular-resizable.css">
+		<link rel="stylesheet" type="text/css" href="//at.alicdn.com/t/font_371097_2wuot8s1z6pnl8fr.css">
+		<!-- 富文本编辑器 -->
+		<link rel="stylesheet" type="text/css" href="lib/umeditor/themes/default/css/umeditor.css">
+		<link href="css/reset.css" rel="stylesheet">
+		<link href="css/common.css" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="css/index.css">
+		<link rel="stylesheet" type="text/css" href="css/modal.css">
+	</head>
+
+	<body>
+		<div ui-view></div>
+		<script type="text/javascript" src="js/require.js" data-main="js/main"></script>
+	</body>
+
 </html>
