--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,8 @@
 		<link href="css/common.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/index.css">
 		<link rel="stylesheet" type="text/css" href="css/modal.css">
+		<link rel="stylesheet" type="text/css" href="/lib/gooflow0.8/css/GooFlow2.css" />
+		<link rel="stylesheet" type="text/css" href="/lib/gooflow0.8/css/default.css" />
 	</head>
 
 	<body>
