--- a/app/tpls/home/main/activityGraph/activityGraph.html
+++ b/app/tpls/home/main/activityGraph/activityGraph.html
@@ -7,58 +7,34 @@
 		<?import namespace="v" implementation="#default#VML" ?>
 		<![endif]-->
 		<style>
-			.myForm {
-				display: block;
-				margin: 0px;
-				padding: 0px;
-				line-height: 1.5;
-				border: #ccc 1px solid;
-				font: 12px Arial, Helvetica, sans-serif;
+			.cont{
+				width: 100%;				
+			}
+			.correlation {
+				display: none;
+				padding: 0 10px;
+				font-size: 14px;
 				margin: 5px 5px 0px 0px;
 				border-radius: 4px;
-			}
-			
-			.myForm .form_title {
-				background: #428bca;
-				padding: 4px;
-				color: #fff;
-				border-radius: 3px 3px 0px 0px;
-			}
-			
-			.myForm .form_content {
-				padding: 4px;
-				background: #fff;
-			}
-			
-			.myForm .form_content table {
-				border: 0px
-			}
-			
-			.myForm .form_content table td {
-				border: 0px
-			}
-			
-			.myForm .form_content table .th {
-				text-align: right;
-				font-weight: bold
-			}
-			
-			.myForm .form_btn_div {
-				text-align: center;
-				border-top: #ccc 1px solid;
-				background: #f5f5f5;
-				padding: 4px;
-				border-radius: 0px 0px 3px 3px;
-			}
-			
-			#propertyForm {
+				width: 300px;
 				float: right;
-				width: 260px
+			}
+			
+			.correlation h4 {
+				font-size: 16px;
+				padding: 10px;
+				color: #000000;
+			}
+			
+			.correlation td input {
+				width: 100px;
+				outline: none;
 			}
 		</style>
 		<script type="text/javascript">
+			var w=($(window).width())*0.7;
 			var property = {
-				width: 1200,
+				width: w,
 				height: 600,
 				toolBtns: ["start round", "end round", "task round", "node", "chat", "state", "plug", "join", "fork", "complex mix"],
 				haveHead: true,
@@ -97,34 +73,18 @@
 				//				demo.loadData(jsondata);
 				demo.onItemFocus = function(id, model) {
 					var obj;
-					$("#ele_model").val(model);
-					$("#ele_id").val(id);
-					if(model == "line") {
-						obj = this.$lineData[id];
-						$("#ele_type").val(obj.M);
-						$("#ele_left").val("");
-						$("#ele_top").val("");
-						$("#ele_width").val("");
-						$("#ele_height").val("");
-						$("#ele_from").val(obj.from);
-						$("#ele_to").val(obj.to);
-					} else if(model == "node") {
+					if(model == "node") {
 						obj = this.$nodeData[id];
-						$("#ele_type").val(obj.type);
-						$("#ele_left").val(obj.left);
-						$("#ele_top").val(obj.top);
-						$("#ele_width").val(obj.width);
-						$("#ele_height").val(obj.height);
-						$("#ele_from").val("");
-						$("#ele_to").val("");
+						$(".correlation").show();
+
 					}
-					$("#ele_name").val(obj.name);
+
 					return true;
 				};
-				demo.onItemBlur = function(id, model) {
-					document.getElementById("propertyForm").reset();
-					return true;
-				};
+				//				demo.onItemBlur = function(id, model) {
+				//					document.getElementById("propertyForm").reset();
+				//					return true;
+				//				};
 			});
 			var out;
 
@@ -135,65 +95,44 @@
 	</head>
 
 	<body style="background:#EEEEEE">
-		<div class="modal-header">
-			<h3>绘制活动图</h3>
-		</div>
-		<div id="demo" style="margin:5px;float:left"></div>
-		<form class="myForm" id="propertyForm">
-			<div class="form_title">属性设置</div>
-			<div class="form_content">
-				<table>
-					<tr>
-						<td class="th">Id：</td>
-						<td><input type="text" style="width:120px" id="ele_id" /></td>
-					</tr>
-					<tr>
-						<td class="th">Name：</td>
-						<td><input type="text" style="width:120px" id="ele_name" /></td>
-					</tr>
-					<tr>
-						<td class="th">Type：</td>
-						<td><input type="text" style="width:120px" id="ele_type" /></td>
-					</tr>
-					<tr>
-						<td class="th">Model：</td>
-						<td><input type="text" style="width:120px" id="ele_model" /></td>
-					</tr>
-					<tr>
-						<td class="th">Left-r：</td>
-						<td><input type="text" style="width:120px" id="ele_left" /></td>
-					</tr>
-					<tr>
-						<td class="th">Top-r：</td>
-						<td><input type="text" style="width:120px" id="ele_top" /></td>
-					</tr>
-					<tr>
-						<td class="th">Width：</td>
-						<td><input type="text" style="width:120px" id="ele_width" /></td>
-					</tr>
-					<tr>
-						<td class="th">Height：</td>
-						<td><input type="text" style="width:120px" id="ele_height" /></td>
-					</tr>
-					<tr>
-						<td class="th">From：</td>
-						<td><input type="text" style="width:120px" id="ele_from" /></td>
-					</tr>
-					<tr>
-						<td class="th">To：</td>
-						<td><input type="text" style="width:120px" id="ele_to" /></td>
-					</tr>
+		<div class="cont">
+			<div class="modal-header">
+				<h3>绘制活动图</h3>
+			</div>
+			<div id="demo" style="margin:5px;float:left"></div>
+			<div class="correlation">
+				<h4>关联关系</h4>
+				<table class="table-fullborder table-fullborder2">
+					<tbody>
+						<tr>
+							<th>ID</th>
+							<th>标识</th>
+							<th>备注</th>
+						</tr>
+						<tr>
+							<td>
+								<input type="text" name="" id="" value="" />
+							</td>
+							<td>
+								<select name="">
+									<option value="">输入</option>
+									<option value="">输出</option>
+									<option value="">忽略</option>
+								</select>
+							</td>
+							<td>
+								<input type="text" name="" id="" value="" />
+							</td>
+						</tr>
+					</tbody>
 				</table>
 			</div>
-			<div class="form_btn_div">
-				<input type="reset" value="重置" />
-				<input type="button" value="确定" onclick="alert(demo.$focus)" />
+			<div style="clear:both">
+				<input id="submit" type="button" value='导出结果' onclick="Export()" />
+				<textarea id="result" row="6"></textarea>
 			</div>
-		</form>
-		<div style="clear:both">
-			<input id="submit" type="button" value='导出结果' onclick="Export()" />
-			<textarea id="result" row="6"></textarea>
 		</div>
+
 	</body>
 
 </html>
